--- a/static/partials/Byzip.html
+++ b/static/partials/Byzip.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <div>
     <div class="underline" style="float:left">Current Weather</div>
     <div style="float:left; width:100%; padding-left:15px">
@@ -37,3 +40,5 @@
       </div>
   	</div>
 </div>
+</body>
+</html>
