added head, title, meta and here goes hoping it works

--- a/static/partials/Byzip.html
+++ b/static/partials/Byzip.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>COMPX341-A3-1276832</title>
+	<meta name="viewport" content="inital-scale=1.0">
+	<meta charset="utf-8">
+</head>
 <body>
 <div>
     <div class="underline" style="float:left">Current Weather</div>
