--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,6 +15,7 @@
         <div float="left">
             <% include includes/mainbody %>
         </div>
+        <div id="map" style="width:100%; height:100%"></div>
     </body>
 
     <script>
@@ -22,5 +23,15 @@
             angular.bootstrap(document, ['ConsoleModule']);
         });
     </script>
-
+	<script>
+		var map;
+		function initMap() {
+			map = new google.maps.Map(document.getElementById('map'), {
+				center: {lat: -37.7833, lng: 175.2793},
+				zoom: 8
+			});		
+		}
+	</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCI46l5ThhLsy8cali5JprGNsn6PPoY_y0&callback=initMap"
+	async defer></script>
 </html>
