--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,7 +15,7 @@
         <div float="left">
             <% include includes/mainbody %>
         </div>
-        <div id="map" style="width:100%; height:100%"></div>
+        <div id="map" style="width:80%; height:80%"></div>
     </body>
 
     <script>
@@ -25,12 +25,17 @@
     </script>
 	<script>
 		var map;
+		var start= {lat: -37.7833, lng: 175.2793};
+		var marker;
 		function initMap() {
 			map = new google.maps.Map(document.getElementById('map'), {
-				center: {lat: -37.7833, lng: 175.2793},
+				center: start,
 				zoom: 8
-			});		
+			});
+			marker = new google.maps.Marker({position: start, map: map});
 		}
+			
+
 	</script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCI46l5ThhLsy8cali5JprGNsn6PPoY_y0&callback=initMap"
 	async defer></script>
