--- a/views/main.ejs
+++ b/views/main.ejs
@@ -27,12 +27,27 @@
 		var map;
 		var start= {lat: -37.7833, lng: 175.2793};
 		var marker;
+		var city1 = document.getElementById('zip1'), 'nz';
+		var geocoder = new google.maps.Geocoder();
 		function initMap() {
+			<!--Initalise Map-->
 			map = new google.maps.Map(document.getElementById('map'), {
 				center: start,
 				zoom: 8
 			});
-			marker = new google.maps.Marker({position: start, map: map});
+			geocoder.geocode({
+				'address': city1
+			}, function(results, status){
+				if(status == google.maps.GeocoderStatus.OK){
+					var lat = results[0].geometry.location.lat();
+					var lng = results[0].geometry.location.lng();
+					var marker1 = new google.maps.Marker({position: {lat, lng}, map:map});
+				}
+				else{
+					alert("you fucked up " + status);
+				}
+			}
+			)
 		}
 			
 
