--- a/views/main.ejs
+++ b/views/main.ejs
@@ -27,7 +27,7 @@
 		var map;
 		var start= {lat: -37.7833, lng: 175.2793};
 		var marker;
-		var city1 = 'document.getElementById('zip1'), nz';
+		var city1 = 'Hamilton, Nz';
 		var geocoder = new google.maps.Geocoder();
 		function initMap() {
 			<!--Initalise Map-->
