--- a/views/main.ejs
+++ b/views/main.ejs
@@ -36,13 +36,14 @@
 				zoom: 8
 			});
 			geocoder.geocode({
-				'address': city1
+				'city1': city1
 			}, function(results, status){
 				if(status == google.maps.GeocoderStatus.OK){
 					var lat = results[0].geometry.location.lat();
 					var lng = results[0].geometry.location.lng();
-					var pos = {lat, lng}
-					var marker1 = new google.maps.Marker({position: pos, map: map});
+					var mylatlng = {lat, lng};
+					var marker1 = new google.maps.Marker({position: pos});
+					marker1.setMap(map);
 				}
 				else{
 					alert("you fucked up " + status);
