reset some changes to test for workability

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -25,7 +25,7 @@
     </script>
 	<script>
 		var map;
-		var start= new google.maps.LatLng(-37.7833, 175.2793);
+		var start= {lat: -37.7833, lng: 175.2793};
 		var marker;
 		var address = 'Hamilton, Nz';
 		var geocoder;
@@ -39,7 +39,7 @@
 			var marker = new google.maps.Marker({map:map, position: start});
 			geocoder.geocode({'address': address}, 
 				function(results, status){
-					if(status == google.maps.GeocoderStatus.OK){
+					if(status == "OK"){
 						var marker1 = new google.maps.Marker({
 							position: results[0].geometry.location
 							});
