added a speech comma to represent a string

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -37,7 +37,7 @@
 			});
 		}
 		function markCity(){
-			var address = document.getElementById('zip1').value, Nz;
+			var address = document.getElementById('zip1').value, 'Nz';
 			geocoder.geocode({'address': address}, 
 				function(results, status){
 					if(status == "OK"){
