added component restrictions in hopes that it restricts to NZ region

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -37,8 +37,9 @@
 			});
 		}
 		function markCity(){
-			var address = {document.getElementById('zip1').value, 'Nz'};
+			var address = document.getElementById('zip1').value;
 			geocoder.geocode({'address': address}, 
+				{componentRestrictions: country: 'NZ'},
 				function(results, status){
 					if(status == "OK"){
 						var marker1 = new google.maps.Marker({
