--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,7 +39,7 @@
 		function markCity(){
 			var address = document.getElementById('zip1').value;
 			geocoder.geocode({'address': address}, 
-				{componentRestrictions: country: 'NZ'},
+				{componentRestrictions: {country: 'NZ'}},
 				function(results, status){
 					if(status == "OK"){
 						var marker1 = new google.maps.Marker({
