--- a/static/partials/Byzip.html
+++ b/static/partials/Byzip.html
@@ -14,7 +14,7 @@
       	</div>
       	<div id="zip1city" class="underline" style="width:10em">&nbsp;{{zip1City}}</div>
       	<div id="zip1weather" class="underline">&nbsp;{{zip1Weather}}</div>
-      	<div><input type="button" value="Place marker" onClick="markCity()"></div>
+      	<div><input type="button" value="Place marker" onClick="markCity1()"></div>
       </div>
       <div style="float:left; width:100%">
       	<div class="headerText" style="width:10em">
@@ -22,6 +22,7 @@
       	</div>
       	<div id="zip2city" class="underline" style="width:10em">&nbsp;{{zip2City}}</div>
       	<div id="zip2weather" class="underline">&nbsp;{{zip2Weather}}</div>
+      	<div><input type="button" value="Place marker" onClick="markCity2()"></div>
       </div>
       <div style="float:left; width:100%">
       	<div class="headerText" style="width:10em">
@@ -29,6 +30,7 @@
       	</div>
       	<div id="zip3city" class="underline" style="width:10em">&nbsp;{{zip3City}}</div>
       	<div id="zip3weather" class="underline">&nbsp;{{zip3Weather}}</div>
+      	<div><input type="button" value="Place marker" onClick="markCity3()"></div>
       </div>
       <div style="float:left; width:100%">
       	<div class="headerText" style="width:10em">
@@ -36,6 +38,7 @@
       	</div>
       	<div id="zip4city" class="underline" style="width:10em">&nbsp;{{zip4City}}</div>
       	<div id="zip4weather" class="underline">&nbsp;{{zip4Weather}}</div>
+      	<div><input type="button" value="Place marker" onClick="markCity4()"></div>
       </div>
   	</div>
 </div>
